# MaxEntComb

./: README.md  setup.cfg
experiments/: conf_maxent.ini  conf_maxentNR.ini  conf_maxentbig.ini  main.py
matlab/: BIN_CartesianBinning.m  BIN_decompose_F.m  MaxEnt_lbfgs.m  f_PA.m  f_RA.m  f_commonNeighbors.m  test  test.m
matlab/minFunc_2012/: BIN_eigenDecomp_sparseA.m  MaxEnt_Hessv.m  MaxEnt_QN.m  lfbgs_test.m  objectiveAll.asv  objectiveAll.m  testFunc.m
matlab/minFunc_2012/minFunc/: MaxEnt_Newton.m
python/: main.py  maxent_comb.py  requirements.txt  weighted_lin_constr.py
src/maxentcomb/: __init__.py  main.py  maxent_comb.py  weighted_lin_constr.py
