##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = maxentcomb
version = 1.0.0
description = MaxEnt Combined Model
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    networkx
    numpy
    scipy
    tqdm

zip_safe = false
include_package_data = True
python_requires = >=2.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    maxentcomb = maxentcomb.main:main
